--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-
   </head>
   <body>
 
     <nav>
+
       <div id="nav-menu">
         <div id="nav-title">Japanese tips</div>
         <input id="search" type="text" placeholder="Search field...">
@@ -33,6 +33,7 @@
     </main>
 
     <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="index.js"></script>
 
   </body>
