--- a/pages/grammar/pronouns/index.html
+++ b/pages/grammar/pronouns/index.html
@@ -12,7 +12,7 @@
     <main>
     <div class="table green-table" id="first-person-both-table">
       
-      <div class="yellow-cell bold big" style="grid-column: span 2">Both</div>
+      <div class="yellow-cell bold big" style="grid-column: span 2">Both genders</div>
       <div>私「わたくし」</div> <div><div>For <b>formal</b> situations</div></div>
       <div>私「わたし」</div> <div><div>For <b>normal</b> polite situations</div></div>
       <div>俺「おれ」</div> <div><div>A very <b>rough version</b> used almost exclusively by <b>males</b> in very casual situations</div></div>
@@ -33,6 +33,20 @@
       <div>あたい</div> <div>This is found in rougher casual speech of female speakers</div>
 
     </div>
+
+    <div class="table green-table" id="first-person-male-and-female-table-vertical">
+      
+      <div class="light-blue-cell bold big m" style="grid-column: span 2">Male</div>
+      <div>僕「ぼく」</div> <div><div>From fairly <b>polite</b> to fairly <b>casual</b> situations</div></div>
+      <div>儂「わし」</div> <div><div>This is casual and used by men over 50 and by old people in general in some regions. It is a contraction of <span lang="ja">わたし</span> and sometimes written in <span lang="ja">漢字</span> as <span lang="ja">儂</span></div></div>
+
+      <div class="pink-cell bold big f" style="grid-column: span 2">Female</div>
+      <div>あた(く)し</div> <div><div>A very <b>feminine</b> and <b>casual</b> way to refer to oneself. Many girls have decided to opt for <span lang="ja">わたし</span>instead because <span lang="ja">あたし</span> <b>has a cutesy and girly sound</b></div></div>
+      <div>あたい</div> <div>This is found in rougher casual speech of female speakers</div>
+
+
+    </div>
+
     </main>
 
   </body>
