--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <title>Japanese tips</title>
-    <style type="text/css"></style>
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
+    <meta id="viewport" name="viewport" content="width=device-width" />
   </head>
   <body>
 
