--- a/pages/grammar/_blank/index.html
+++ b/pages/grammar/_blank/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
   <head>
     <title></title>
-    <link rel="stylesheet" href="../../page.css">
+    <link rel="stylesheet" href="../../template.css">
     <link rel="stylesheet" href="styles.css">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
+    <meta id="viewport" name="viewport" content="width=device-width" />
+    <script type="text/javascript">function goto(id){document.location.assign(id);}</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <div class="top-button" onclick="goto('#top')">上</div>
+
+    <div class="title">Table of contains</div>
+
+    <div class="table table-of-contains">
+
+      <div onclick="goto('#')"></div>
+
+    </div>
+
+    <div class="title" id=""></div>
+
+    <div class="table"></div>
+
   </body>
 </html>
