--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title></title>
-    <link rel="stylesheet" href="../page.css">
+    <link rel="stylesheet" href="../template.css">
     <link rel="stylesheet" href="styles.css">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
+    <meta id="viewport" name="viewport" content="width=device-width" />
   </head>
   <body>
     <div id="title">Japanese<br>tips</div>
