--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
         <div id="nav-title">Japanese tips</div>
         <input id="search" type="text" placeholder="Search field...">
         <a onclick="changePage('home')">Home</a> <!-- ホーム -->
-        <a onclick="changePage('grammar/nouns')">Nouns</a>
-        <a onclick="changePage('grammar/adjectives')">Adjectives</a>
-        <a onclick="changePage('grammar/verbs')">Verbs</a>
         <a onclick="changePage('grammar/pronouns')">Pronouns</a>
+        <a onclick="changePage('grammar/copular-sentences')">Copular Sentences</a>
       </div>
 
       <div id="nav-button">
