Added and filled 'Sentence Structure' page. Created script for template related stuff and so did automation of creation table of contents. Due to creating a script updated blank's and particles index.html's. I didn't touch other pages just because there is no need. Added title to all pages. Now it's easir to recognise them when I open them one by one in browser. Added some styles in template for faster building pages. Tried using svg for building diagrams, but decided to use grids only and here we are with table only...

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a onclick="changePage('home')">Home</a> <!-- ホーム -->
         <a onclick="changePage('grammar/pronouns')">Pronouns</a>
         <a onclick="changePage('grammar/copular-sentences')">Copular Sentences</a>
+        <a onclick="changePage('grammar/sentence-structure')">Sentence Structure</a>
       </div>
 
       <div id="nav-button">
