--- a/pages/grammar/copular-sentences/index.html
+++ b/pages/grammar/copular-sentences/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="top">
   <head>
-    <title></title>
+    <title>Copular Sentences</title>
     <link rel="stylesheet" href="../../template.css">
     <link rel="stylesheet" href="styles.css">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
@@ -15,14 +15,14 @@
 
     <div class="title">Copular Sentences</div>
 
-    <div class="table table-of-contains">
+    <div class="table" id="table-of-contains">
 
-      <div onclick="goto('#plain-speech')">Plain speech</div>
-      <div onclick="goto('#polite-speech')">Polite speech</div>
+      <div onclick="goto('#plain-speech')">Plain Speech</div>
+      <div onclick="goto('#polite-speech')">Polite Speech</div>
 
     </div>
 
-    <div class="title" id="plain-speech">Plain speech</div>
+    <div class="title" id="plain-speech">Plain Speech</div>
 
     <div class="table fr15-30-30">
       
@@ -32,7 +32,7 @@
 
     </div>
 
-    <div class="title" id="polite-speech">Polite speech</div>
+    <div class="title" id="polite-speech">Polite Speech</div>
 
     <div class="table fr15-30-30">
     
