--- a/pages/grammar/pronouns/index.html
+++ b/pages/grammar/pronouns/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="top">
   <head>
-    <title></title>
+    <title>Pronouns</title>
     <link rel="stylesheet" type="text/css" href="../../template.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
@@ -15,7 +15,7 @@
 
     <div class="title">Pronouns</div>
 
-    <div class="table table-of-contains">
+    <div class="table" id="table-of-contains">
 
       <div onclick="goto('#first-person')">1st person</div>
       <div onclick="goto('#second-person')">2nd person</div>
