--- a/pages/grammar/particles/index.html
+++ b/pages/grammar/particles/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html id="top">
   <head>
-    <title></title>
-    <link rel="stylesheet" href="../../template.css">
-    <link rel="stylesheet" href="styles.css">
+    <title>Particles</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <meta id="viewport" name="viewport" content="width=device-width" />
-    <script type="text/javascript">function goto(id){document.location.assign(id);}</script>
+    <link rel="stylesheet" href="../../template.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../../template.js"></script>
   </head>
   <body>
 
     <div class="top-button" onclick="goto('#top')">上</div>
 
     <div class="title">Particles</div>
+    <div class="table" id="table-of-contains"></div>
 
-    <div class="table table-of-contains">
+    <div class="title">は - Topic</div>
+    <div class="two-equal-column table"></div>
 
-      <div onclick="goto('#')"></div>
-
-    </div>
-
-    <div class="title" id=""></div>
-
-    <div class="table"></div>
+    <div class="title">が - Subject</div>
+    <div class="two-equal-column table"></div>
 
   </body>
 </html>
