Added and completed 'Adjectives'. Replaced particles related stuff from 'Sentence Structure' to 'Particles'. Started using ruby tag for adding furigana for better sentence examples.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <a onclick="changePage('home')">Home</a> <!-- ホーム -->
         <a onclick="changePage('grammar/pronouns')">Pronouns</a>
         <a onclick="changePage('grammar/copular-sentences')">Copular Sentences</a>
+        <a onclick="changePage('grammar/particles')">Particles</a>
         <a onclick="changePage('grammar/sentence-structure')">Sentence Structure</a>
+        <a onclick="changePage('grammar/adjectives')">Adjectives</a>
       </div>
 
       <div id="nav-button">
