--- a/pages/grammar/sentence-structure/index.html
+++ b/pages/grammar/sentence-structure/index.html
@@ -15,9 +15,6 @@
     <div class="top-button" onclick="goto('#top')">上</div>
 
     <div class="title">Sentence Structure</div>
-    <div class="table" id="table-of-contains"></div>
-
-    <div class="title">Structure Itself</div>
     <div class="five-equal-column table" id="structure-table">
         
         <div class="hl-en">Time</div> 
@@ -53,50 +50,8 @@
       <div style="grid-column: span 2">Adverb</div>
       <div>Time</div> <div class="hl-ja">に</div>
 
-      <div class="span-me">Can appear in any order</div>
+      <div class="span-me green">Can appear in any order</div>
     
-    </div>
-
-    <div class="title">Confusing Particle Pairs</div>
-    <div class="four-equal-column table" id="particle-pairs-table">
-
-        <div class="hl-en">Topic</div> <div class="hl-ja">は</div>
-        <div class="hl-en">Subject</div> <div class="hl-ja">が</div>
-
-        <div style="grid-column: span 2" class="green"><div>Defines topic of a <b>sentence</b></div></div>
-        <div style="grid-column: span 2" class="green"><div>Defines doer of the <b>action</b></div></div>
-
-        <div style="grid-column: span 2" class="green"><div>Emphasises into <b>after</b> <span class="ja">は</span></div></div>
-        <div style="grid-column: span 2" class="green"><div>Emphasises into <b>before</b> <span class="ja">が</span></div></div>
-
-        <div style="grid-column: span 2" class="green"><div>Clarifes context for what follows</div></div>
-        <div style="grid-column: span 2" class="green"><div>Contains new or important info</div></div>
-
-        <div class="hl-en">Location</div> <div class="hl-ja">で</div>
-        <div class="hl-en">Location of existence</div> <div class="hl-ja">に</div>
-
-        <div style="grid-column: span 2" class="green"><div>Defines where action <b>takes place</b></div></div>
-        <div style="grid-column: span 2" class="green"><div>Defines where something <b>is</b></div></div>
-
-        <div style="grid-column: span 2" class="green"><div>Used into verbs of action</div></div>
-        <div style="grid-column: span 2" class="green"><div>Used with verbs of existence: <span class="ja">あります</span>、<span class="ja">います</span></div></div>
-
-        <div class="hl-en">Time</div> <div class="hl-ja">に</div>
-        <div class="hl-en">Time</div> <div class="hl-ja"></div>
-
-        <div style="grid-column: span 2" class="green"><div>For points in time that occur repeatedly, eg. there are many Sundays, Januarys and 5 o'clocks</div></div>
-        <div style="grid-column: span 2; grid-row: span 2" class="green"><div>For time references that change depending on when 'now' is, eg. 'today', 'next week', and 'last year' are different depending on when they are said</div></div>
-
-        <div style="grid-column: span 2" class="green"><div>Context tells us which one is being referred to</div></div>
-
-        <div class="hl-en">Destination</div> <div class="hl-ja">に</div>
-        <div class="hl-en">Direction</div><div class="hl-ja">へ</div>
-
-        <div style="grid-column: span 2" class="green"><div>Defines a <b>place</b> something is moving to</div></div>
-        <div style="grid-column: span 2" class="green"><div>Defines the <b>direction</b> something is moving to</div></div>
-
-        <div style="grid-column: span 4" class="green"><div>A destination can also be a direction ( eg. you can move in the direction of a place, such as 'home' ), but a direction is not always a destination ( eg. 'north' is not a place you can go to )</div></div>
-
     </div>
 
   </body>
