Replaced double quotes with single because I think it's easier to read with them. Added possibility to create others' pages links in pages. Added 'o' particle info in 'Particles'. Created and filled 'Verb' page. It was quite a lot of work, but fills good. Added and filled small, but useful page 'To Wear/Take Off'. Some adjustments in template.

--- a/index.html
+++ b/index.html
@@ -2,39 +2,41 @@
 <html>
   <head>
     <title>Japanese tips</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <meta content="utf-8" http-equiv="encoding">
-    <meta id="viewport" name="viewport" content="width=device-width" />
+    <link rel='stylesheet' type='text/css' href='index.css'>
+    <meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
+    <meta content='utf-8' http-equiv='encoding'>
+    <meta id='viewport' name='viewport' content='width=device-width' />
   </head>
   <body>
 
     <nav>
 
-      <div id="nav-menu">
-        <div id="nav-title">Japanese tips</div>
-        <input id="search" type="text" placeholder="Search field...">
-        <a onclick="changePage('home')">Home</a> <!-- ホーム -->
-        <a onclick="changePage('grammar/pronouns')">Pronouns</a>
-        <a onclick="changePage('grammar/copular-sentences')">Copular Sentences</a>
-        <a onclick="changePage('grammar/particles')">Particles</a>
-        <a onclick="changePage('grammar/sentence-structure')">Sentence Structure</a>
-        <a onclick="changePage('grammar/adjectives')">Adjectives</a>
+      <div id='nav-menu'>
+        <div id='nav-title'>Japanese tips</div>
+        <input id='search' type='text' placeholder='Search field...'>
+        <a onclick='changePage("home")'>Home</a> <!-- ホーム -->
+        <a onclick='changePage("grammar/pronouns")'>Pronouns</a>
+        <a onclick='changePage("grammar/copular-sentences")'>Copular Sentences</a>
+        <a onclick='changePage("grammar/particles")'>Particles</a>
+        <a onclick='changePage("grammar/sentence-structure")'>Sentence Structure</a>
+        <a onclick='changePage("grammar/adjectives")'>Adjectives</a>
+        <a onclick='changePage("grammar/verbs")'>Verbs</a>
+        <a onclick='changePage("grammar/to-wear-or-take-off")'>To Wear/Take Off</a>
       </div>
 
-      <div id="nav-button">
+      <div id='nav-button'>
         メニュー
       </div>
     </nav>
     
     <main>
-      <div id="filler"></div>
-      <iframe src="" id="inner-page">Download normal browser</iframe>
+      <div id='filler'></div>
+      <iframe src='' id='inner-page'>Download normal browser</iframe>
     </main>
 
     <!-- Scripts -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="index.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src='index.js'></script>
 
   </body>
 </html>
