--- a/pages/grammar/particles/index.html
+++ b/pages/grammar/particles/index.html
@@ -1,96 +1,118 @@
 <!DOCTYPE html>
-<html id="top">
+<html id='top'>
   <head>
     <title>Particles</title>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <meta content="utf-8" http-equiv="encoding">
-    <meta id="viewport" name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../template.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../../template.js"></script>
+    <meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
+    <meta content='utf-8' http-equiv='encoding'>
+    <meta id='viewport' name='viewport' content='width=device-width' />
+    <link rel='stylesheet' href='../../template.css'>
+    <link rel='stylesheet' href='styles.css'>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src='../../template.js'></script>
   </head>
   <body>
 
-    <div class="top-button" onclick="goto('#top')">上</div>
+    <div class='top-button' onclick='goto("#top")'>上</div>
 
-    <div class="title">Particles</div>
-    <div class="table" id="table-of-contains"></div>
+    <div class='title'>Particles</div>
+    <div class='table' id='table-of-contains'></div>
 
-    <div class="title">TLDR</div>
-    <div class="table" style="grid-template-columns: 0.15fr 0.6fr">
+    <div class='title'>TLDR</div>
+    <div class='table' style='grid-template-columns: 0.15fr 0.6fr'>
       
-      <div class="hl-ja">が</div> <div class="green"><div><span class="ja">が</span> marks the <b>subject</b> — person/thing that performs an action (with verbs) or is what exhibits a certain state (with adjectives/adjectival nouns). By doing so, it is implied that the listener(s) are receiving <b>new information</b>, potentially even the speaker. Contrary to generic statements, it is the objective voice needed in making <b>neutral statements</b> as well as <b>answering questions</b> with the information the asker seeks</div></div>
-      <div style="grid-column: span 2"><div>
-        <span class="ja-wrap">ボブ：誰<span class="pink">が</span>学生？</span><br>
-        Bob: Who is the one that is student?<br>
-        <span class="ja-wrap">アリス：ジョン<span class="pink">が</span>学生。</span><br>
-        Alice: John is the one who is student.
+      <div class='hl-ja'>が</div> <div class='green'><div><span class='ja'>が</span> marks the <b>subject</b> — person/thing that performs an action (with verbs) or is what exhibits a certain state (with adjectives/adjectival nouns). By doing so, it is implied that the listener(s) are receiving <b>new information</b>, potentially even the speaker. Contrary to generic statements, it is the objective voice needed in making <b>neutral statements</b> as well as <b>answering questions</b> with the information the asker seeks</div></div>
+      <div style='grid-column: span 2'><div>
+        <span class='ja-wrap'>ボブ：誰<span class='pink'>が</span>学生？</span><br>
+        Bob: Who is <span class='pink'>the one that is</span> student?<br>
+        <span class='ja-wrap'>アリス：ジョン<span class='pink'>が</span>学生。</span><br>
+        Alice: John is <span class='pink'>the one who is</span> student.
       </div></div>
 
-      <div class="hl-ja">は</div> <div class="green"><div><span class="ja">は</span>, unlike <span class="ja">が</span>, is not a case particle. It is a special kind of particle called <b>a bound particle</b>: its purpose is lived out by the comment that follows, which means <b>it is not restricted by what comes before it</b>. <span class="ja">は</span> is <b>bound to the comment that follows</b>. In return, <b>the comment dictates the function of</b> <span class="ja">は</span>. The only thing the listener can know is that <span class="ja">は</span> <b>marks the topic of the discussion</b> to come. Its motto is <b>"I don’t know about other things, but as for X..."</b></div></div>
-      <div style="grid-column: span 2"><div>
-        <span class="ja-wrap">ボブ：アリス<span class="pink">は</span>学生？</span><br>
+      <div class='hl-ja'>は</div> <div class='green'><div><span class='ja'>は</span>, unlike <span class='ja'>が</span>, is not a case particle. It is a special kind of particle called <b>a bound particle</b>: its purpose is lived out by the comment that follows, which means <b>it is not restricted by what comes before it</b>. <span class='ja'>は</span> is <b>bound to the comment that follows</b>. In return, <b>the comment dictates the function of</b> <span class='ja'>は</span>. The only thing the listener can know is that <span class='ja'>は</span> <b>marks the topic of the discussion</b> to come. Its motto is <b>'I don’t know about other things, but as for X...'</b></div></div>
+      <div style='grid-column: span 2'><div>
+        <span class='ja-wrap'>ボブ：アリス<span class='pink'>は</span>学生？</span><br>
         Bob: Is Alice (you) student?<br>
-        <span class="ja-wrap">アリス：うん、学生。</span><br>
+        <span class='ja-wrap'>アリス：うん、学生。</span><br>
         Alice: Yeah, (I) am.
       </div></div>
 
-      <div class="hl-ja">も</div> <div class="green"><div>Another particle that is very similar to the topic particle is <b>the inclusive topic particle</b>. It is essentially <b>the topic particle with the additional meaning of "also"</b>. Basically, it can introduce another topic in addition to the current topic. Its use is best explained by an example</div></div>
-      <div style="grid-column: span 2"><div>
-        <span class="ja-wrap">ボブ：アリス<span class="pink">は</span>学生？</span><br>
+      <div class='hl-ja'>も</div> <div class='green'><div>Another particle that is very similar to the topic particle is <b>the inclusive topic particle</b>. It is essentially <b>the topic particle with the additional meaning of 'also'</b>. Basically, it can introduce another topic in addition to the current topic. Its use is best explained by an example</div></div>
+      <div style='grid-column: span 2'><div>
+        <span class='ja-wrap'>ボブ：アリス<span class='pink'>は</span>学生？</span><br>
         Bob: Is Alice (you) student?<br>
-        <span class="ja-wrap">アリス：うん、トム<span class="pink">も</span>学生。</span><br>
-        Alice: Yeah, and Tom is <b>also</b> student.
+        <span class='ja-wrap'>アリス：うん、トム<span class='pink'>も</span>学生。</span><br>
+        Alice: Yeah, and Tom <span class='pink'>is also</span> student.
+      </div></div>
+
+      <div class='hl-ja'>を</div> <div class='green'><div>The case that the particle <ruby>を</ruby> marks is called <b>the accusative case</b>. The accusative case <b>marks the direct object of a transitive verb</b>. <ruby>を</ruby> is usually pronounced as <b>'o'</b> but is still pronounced as <b>'wo'</b> depending on the dialect and/or context. Particle <ruby>を</ruby> primarily marks the direct object, but <b>that isn’t all it can do</b>. <b>As a transition market it can be used to mean:</b> through/along, toward/around, object of departure - 'from', flux in degree and time 
+      </div></div>
+      <div style='grid-column: span 2'><div>
+        <ruby>
+        <ruby>魚<rt>さかな</rt><rtc class='under'>fish</rtc></ruby>
+        <span class='pink'>を</span>
+        <ruby><rbc><ruby>食<rt>た</rt></ruby>べる</rbc><rtc class='under'>eat</rtc></ruby>
+        。
+      </ruby><br>
+        Eat fish.<br>
+        <ruby>
+        街<rt>まち</rt><rtc class='under'>town</rtc>
+        <span class='pink'>を</span>
+        <ruby><ruby>歩<rt>ある</rt></ruby>く<rtc class='under'>walk</rtc></ruby>
+        。
+      </ruby><br>
+        Walk <span class='pink'>through</span> town.
       </div></div>
 
     </div>
 
-    <div class="title">WIP 第11課 が - Subject</div>
-    <div class="two-equal-column table"></div>
+    <div class='title'>WIP 第11課 が - Subject</div>
+    <div class='two-equal-column table'></div>
 
-    <div class="title">WIP 第12課 は - Topic</div>
-    <div class="two-equal-column table"></div>
+    <div class='title'>WIP 第12課 は - Topic</div>
+    <div class='two-equal-column table'></div>
 
-    <div class="title">Confusing Particle Pairs</div>
-    <div class="four-equal-column table" id="particle-pairs-table">
+    <div class='title'>WIP 第15課 を - The Direct Object or Transition Marker</div>
+    <div class='two-equal-column table'></div>
 
-        <div class="hl-en">Topic</div> <div class="hl-ja">は</div>
-        <div class="hl-en">Subject</div> <div class="hl-ja">が</div>
+    <div class='title'>Confusing Particle Pairs</div>
+    <div class='four-equal-column table' id='particle-pairs-table'>
 
-        <div style="grid-column: span 2" class="green"><div>Defines topic of a <b>sentence</b></div></div>
-        <div style="grid-column: span 2" class="green"><div>Defines doer of the <b>action</b></div></div>
+        <div class='hl-en'>Topic</div> <div class='hl-ja'>は</div>
+        <div class='hl-en'>Subject</div> <div class='hl-ja'>が</div>
 
-        <div style="grid-column: span 2" class="green"><div>Emphasises into <b>after</b> <span class="ja">は</span></div></div>
-        <div style="grid-column: span 2" class="green"><div>Emphasises into <b>before</b> <span class="ja">が</span></div></div>
+        <div style='grid-column: span 2' class='green'><div>Defines topic of a <b>sentence</b></div></div>
+        <div style='grid-column: span 2' class='green'><div>Defines doer of the <b>action</b></div></div>
 
-        <div style="grid-column: span 2" class="green"><div>Clarifes context for what follows</div></div>
-        <div style="grid-column: span 2" class="green"><div>Contains new or important info</div></div>
+        <div style='grid-column: span 2' class='green'><div>Emphasises into <b>after</b> <span class='ja'>は</span></div></div>
+        <div style='grid-column: span 2' class='green'><div>Emphasises into <b>before</b> <span class='ja'>が</span></div></div>
 
-        <div class="hl-en">Location</div> <div class="hl-ja">で</div>
-        <div class="hl-en">Location of existence</div> <div class="hl-ja">に</div>
+        <div style='grid-column: span 2' class='green'><div>Clarifes context for what follows</div></div>
+        <div style='grid-column: span 2' class='green'><div>Contains new or important info</div></div>
 
-        <div style="grid-column: span 2" class="green"><div>Defines where action <b>takes place</b></div></div>
-        <div style="grid-column: span 2" class="green"><div>Defines where something <b>is</b></div></div>
+        <div class='hl-en'>Location</div> <div class='hl-ja'>で</div>
+        <div class='hl-en'>Location of existence</div> <div class='hl-ja'>に</div>
 
-        <div style="grid-column: span 2" class="green"><div>Used into verbs of action</div></div>
-        <div style="grid-column: span 2" class="green"><div>Used with verbs of existence: <span class="ja">あります</span>、<span class="ja">います</span></div></div>
+        <div style='grid-column: span 2' class='green'><div>Defines where action <b>takes place</b></div></div>
+        <div style='grid-column: span 2' class='green'><div>Defines where something <b>is</b></div></div>
 
-        <div class="hl-en">Time</div> <div class="hl-ja">に</div>
-        <div class="hl-en">Time</div> <div class="hl-ja"></div>
+        <div style='grid-column: span 2' class='green'><div>Used into verbs of action</div></div>
+        <div style='grid-column: span 2' class='green'><div>Used with verbs of existence: <span class='ja'>あります</span>、<span class='ja'>います</span></div></div>
 
-        <div style="grid-column: span 2" class="green"><div>For points in time that occur repeatedly, eg. there are many Sundays, Januarys and 5 o'clocks</div></div>
-        <div style="grid-column: span 2; grid-row: span 2" class="green"><div>For time references that change depending on when 'now' is, eg. 'today', 'next week', and 'last year' are different depending on when they are said</div></div>
+        <div class='hl-en'>Time</div> <div class='hl-ja'>に</div>
+        <div class='hl-en'>Time</div> <div class='hl-ja'></div>
 
-        <div style="grid-column: span 2" class="green"><div>Context tells us which one is being referred to</div></div>
+        <div style='grid-column: span 2' class='green'><div>For points in time that occur repeatedly, eg. there are many Sundays, Januarys and 5 o'clocks</div></div>
+        <div style='grid-column: span 2; grid-row: span 2' class='green'><div>For time references that change depending on when 'now' is, eg. 'today', 'next week', and 'last year' are different depending on when they are said</div></div>
 
-        <div class="hl-en">Destination</div> <div class="hl-ja">に</div>
-        <div class="hl-en">Direction</div><div class="hl-ja">へ</div>
+        <div style='grid-column: span 2' class='green'><div>Context tells us which one is being referred to</div></div>
 
-        <div style="grid-column: span 2" class="green"><div>Defines a <b>place</b> something is moving to</div></div>
-        <div style="grid-column: span 2" class="green"><div>Defines the <b>direction</b> something is moving to</div></div>
+        <div class='hl-en'>Destination</div> <div class='hl-ja'>に</div>
+        <div class='hl-en'>Direction</div><div class='hl-ja'>へ</div>
 
-        <div style="grid-column: span 4" class="green"><div>A destination can also be a direction ( eg. you can move in the direction of a place, such as 'home' ), but a direction is not always a destination ( eg. 'north' is not a place you can go to )</div></div>
+        <div style='grid-column: span 2' class='green'><div>Defines a <b>place</b> something is moving to</div></div>
+        <div style='grid-column: span 2' class='green'><div>Defines the <b>direction</b> something is moving to</div></div>
+
+        <div style='grid-column: span 4' class='green'><div>A destination can also be a direction ( eg. you can move in the direction of a place, such as 'home' ), but a direction is not always a destination ( eg. 'north' is not a place you can go to )</div></div>
 
     </div>
 
