--- a/pages/grammar/_blank/index.html
+++ b/pages/grammar/_blank/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html id="top">
+<html id='top'>
   <head>
     <title></title>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <meta content="utf-8" http-equiv="encoding">
-    <meta id="viewport" name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../template.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../../template.js"></script>
+    <meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
+    <meta content='utf-8' http-equiv='encoding'>
+    <meta id='viewport' name='viewport' content='width=device-width' />
+    <link rel='stylesheet' href='../../template.css'>
+    <link rel='stylesheet' href='styles.css'>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src='../../template.js'></script>
   </head>
   <body>
 
-    <div class="top-button" onclick="goto('#top')">上</div>
+    <div class='top-button' onclick='goto("#top")'>上</div>
 
-    <div class="title">Page title</div>
-    <div class="table" id="table-of-contains"></div>
+    <div class='title'><div>Page title</div></div>
+    <div class='table' id='table-of-contains'></div>
 
-    <div class="title"></div>
-    <div class="two-equal-column table"></div>
+    <div class='title'><div></div></div>
+    <div class='two-equal-column table'></div>
 
   </body>
 </html>
