Reformed the whole site navigation. Now the site works like an app, but still tries to look like a page. In other words you can get a link for any page, but when you navigate between them you actually sit on the same page. Just its content changes. Nothing new for the world of Web technologies, but not bad for a client side only web page. Also added page 'Questions' and filled it, but there is information to add. I'll finish next time

--- a/grammar/copular-sentences/index.html
+++ b/grammar/copular-sentences/index.html
@@ -2,27 +2,20 @@
 <html id='top'>
   <head>
     <title>Copular Sentences</title>
-    <link rel='stylesheet' href='../../template.css'>
-    <link rel='stylesheet' href='styles.css'>
     <meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
     <meta content='utf-8' http-equiv='encoding'>
     <meta id='viewport' name='viewport' content='width=device-width' />
-    <script type='text/javascript'>function goto(id){document.location.assign(id);}</script>
+    <link rel='stylesheet' href='../../template.css'>
+    <link rel='stylesheet' href='styles.css'>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src='../../template.js'></script>
   </head>
   <body>
 
     <div class='top-button' onclick='goto("#top")'>上</div>
 
     <div class='title'>Copular Sentences</div>
-
-    <div class='table' id='table-of-contains'>
-
-      <div onclick='goto("#therminology")'>Therminology</div>
-      <div onclick='goto("#definition")'>Definition</div>
-      <div onclick='goto("#plain-speech")'>Plain Speech Copula</div>
-      <div onclick='goto("#polite-speech")'>Polite Speech Copula</div>
-
-    </div>
+    <div class='table' id='table-of-contains'></div>
 
     <div class='title' id='therminology'>Therminology</div>
     <div class='one-column table'>
