--- a/grammar/pronouns/index.html
+++ b/grammar/pronouns/index.html
@@ -2,29 +2,22 @@
 <html id='top'>
   <head>
     <title>Pronouns</title>
-    <link rel='stylesheet' type='text/css' href='../../template.css'>
-    <link rel='stylesheet' type='text/css' href='styles.css'>
     <meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
     <meta content='utf-8' http-equiv='encoding'>
     <meta id='viewport' name='viewport' content='width=device-width' />
-    <script type='text/javascript'>function goto(id){document.location.assign(id);}</script>
+    <link rel='stylesheet' href='../../template.css'>
+    <link rel='stylesheet' href='styles.css'>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src='../../template.js'></script>
   </head>
   <body>
 
     <div class='top-button' onclick='goto("#top")'>上</div>
 
     <div class='title'>Pronouns</div>
+    <div class='table' id='table-of-contains'></div>
 
-    <div class='table' id='table-of-contains'>
-
-      <div onclick='goto("#first-person")'>1st person</div>
-      <div onclick='goto("#second-person")'>2nd person</div>
-      <div onclick='goto("#third-person")'>3rd person</div>
-      <div onclick='goto("#place-n-things")'>Place & Things</div>
-
-    </div>
-
-    <div class='title' id='first-person'>1st person</div>
+    <div class='title' id='first-person'>1st Person</div>
 
     <div class='table two-column'>
       
@@ -71,7 +64,7 @@
 
     </div>
 
-    <div class='title' id='second-person'>2nd person</div>
+    <div class='title' id='second-person'>2nd Person</div>
 
     <div class='table two-column'>
     
