--- a/grammar/verbs/index.html
+++ b/grammar/verbs/index.html
@@ -238,7 +238,7 @@
 
       <div class='hl-en light-blue'><div>To Wear (Accessories)</div></div>
       
-      <div><div>To express <b>'to wear'</b>, you have a lot of options. You can use <b><ruby>する</ruby> for accessories</b>. The other 'to wear' verbs look at <a onclick='changePage("grammar/to-wear-or-take-off")'>To Wear/Take Off</a></div></div>
+      <div><div>To express <b>'to wear'</b>, you have a lot of options. You can use <b><ruby>する</ruby> for accessories</b>. The other 'to wear' verbs look at <a onclick='changePageTo("grammar/to-wear-or-take-off")'>To Wear/Take Off</a></div></div>
 
       <div class='hl-ja-like'><div>
         <span class='ja-wrap'><ruby><ruby>手<rt>て</rt></ruby><ruby>袋<rt>ぶくる</rt></ruby><rtc class='under'>gloves</rtc></ruby>を<span class='yellow'>する</span></span><br>
