--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
       <div id='nav-menu'>
         <div id='nav-title'>Japanese tips</div>
         <input id='search' type='text' placeholder='Search field...'>
-        <a onclick='changePage("home")'>Home</a> <!-- ホーム -->
-        <a onclick='changePage("grammar/pronouns")'>Pronouns</a>
-        <a onclick='changePage("grammar/copular-sentences")'>Copular Sentences</a>
-        <a onclick='changePage("grammar/particles")'>Particles</a>
-        <a onclick='changePage("grammar/sentence-structure")'>Sentence Structure</a>
-        <a onclick='changePage("grammar/adjectives")'>Adjectives</a>
-        <a onclick='changePage("grammar/verbs")'>Verbs</a>
-        <a onclick='changePage("grammar/to-wear-or-take-off")'>To Wear/Take Off</a>
+        <a data-page='home'>Home</a> <!-- ホーム -->
+        <a data-page='grammar/pronouns'>Pronouns</a>
+        <a data-page='grammar/copular-sentences'>Copular Sentences</a>
+        <a data-page='grammar/particles'>Particles</a>
+        <a data-page='grammar/sentence-structure'>Sentence Structure</a>
+        <a data-page='grammar/adjectives'>Adjectives</a>
+        <a data-page='grammar/verbs'>Verbs</a>
+        <a data-page='grammar/to-wear-or-take-off'>To Wear/Take Off</a>
+        <a data-page='grammar/questions'>Questions</a>
       </div>
 
       <div id='nav-button'>
