So much was done. I added stylish scrollbar in menu and fixed bugs with changing orientation and text align in menu. I created DB with words so now I can write examples and just words in japanese times faster. Due to all the changes I changed css files a lot where. And as blank page was changed I changed all related stuff in all pages as well. Finished 'Questions' page. Updated .gitignore because created test page to play with some things. Likely I forgot to mention something as it was quite a long ago from the last push.

--- a/grammar/verbs/index.html
+++ b/grammar/verbs/index.html
@@ -8,11 +8,12 @@
     <link rel='stylesheet' href='../../template.css'>
     <link rel='stylesheet' href='styles.css'>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src="../../wordDB.js"></script>
     <script src='../../template.js'></script>
   </head>
   <body>
 
-    <div class='top-button' onclick='goto("#top")'>上</div>
+    <div class='top-button' onclick='goToAnchor("#top")'>上</div>
 
     <div class='title'>Verbs</div>
     <div class='table' id='table-of-contains'></div>
@@ -226,7 +227,7 @@
 
       <div class='hl-ja-like'><div>
         <span class='ja-wrap'><ruby>この<rtc class='under'>this</rtc></ruby><ruby>ワイン<rtc class='under'>wine</rtc></ruby>は<ruby><ruby>2<rt>ぬ</rt></ruby><ruby>千<rt>せん</rt></ruby><rtc class='under'>2000</rtc></ruby><ruby>円<rt>えん</rt><rtc class='under'>yen</rtc></ruby><ruby>も<rtc class='under'>even</rtc></ruby><ruby class='yellow'>しません<rtc class='under'>doesn't cost</rtc></ruby></span><br>
-        This wine <span class='yellow'>doesn’t</span> even <span class='yellow'>cost</span> 2000 yen. 
+        This wine <span class='yellow'>doesn’t</span> even <span class='yellow'>cost</span> 2000 yen.
       </div></div>
 
       <div><div>You could also just <b>use the copula</b>, <ruby>だ</ruby> or <ruby>です</ruby>, <b>to discuss charges and fees</b></div></div>
