--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
     <meta content='utf-8' http-equiv='encoding'>
     <meta id='viewport' name='viewport' content='width=device-width' />
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src="wordDB.js"></script>
+    <script src='index.js'></script>
   </head>
   <body>
 
@@ -34,10 +37,6 @@
       <div id='filler'></div>
       <iframe src='' id='inner-page'>Download normal browser</iframe>
     </main>
-
-    <!-- Scripts -->
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
-    <script src='index.js'></script>
 
   </body>
 </html>
