--- a/grammar/particles/index.html
+++ b/grammar/particles/index.html
@@ -8,11 +8,12 @@
     <link rel='stylesheet' href='../../template.css'>
     <link rel='stylesheet' href='styles.css'>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src="../../wordDB.js"></script>
     <script src='../../template.js'></script>
   </head>
   <body>
 
-    <div class='top-button' onclick='goto("#top")'>上</div>
+    <div class='top-button' onclick='goToAnchor("#top")'>上</div>
 
     <div class='title'>Particles</div>
     <div class='table' id='table-of-contains'></div>
