Kostul ushit perenesu sait potom na awesome jpnsss

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       <div id='nav-menu'>
         <div id='nav-title'>Japanese tips</div>
         <input id='search' type='text' placeholder='Search field...'>
-        <a data-page='home'>Home</a> <!-- ホーム -->
-        <a data-page='grammar/pronouns'>Pronouns</a>
-        <a data-page='grammar/copular-sentences'>Copular Sentences</a>
-        <a data-page='grammar/particles'>Particles</a>
-        <a data-page='grammar/sentence-structure'>Sentence Structure</a>
-        <a data-page='grammar/adjectives'>Adjectives</a>
-        <a data-page='grammar/verbs'>Verbs</a>
-        <a data-page='grammar/to-wear-or-take-off'>To Wear/Take Off</a>
-        <a data-page='grammar/questions'>Questions</a>
+        <a data-page='japanese-tips/home'>Home</a> <!-- ホーム -->
+        <a data-page='japanese-tips/grammar/pronouns'>Pronouns</a>
+        <a data-page='japanese-tips/grammar/copular-sentences'>Copular Sentences</a>
+        <a data-page='japanese-tips/grammar/particles'>Particles</a>
+        <a data-page='japanese-tips/grammar/sentence-structure'>Sentence Structure</a>
+        <a data-page='japanese-tips/grammar/adjectives'>Adjectives</a>
+        <a data-page='japanese-tips/grammar/verbs'>Verbs</a>
+        <a data-page='japanese-tips/grammar/to-wear-or-take-off'>To Wear/Take Off</a>
+        <a data-page='japanese-tips/grammar/questions'>Questions</a>
       </div>
 
       <div id='nav-button'>
